  thanks to Hanno Boeck
+ [lang] Norwegian update, thanks to Sven-Erik Andersen 
+ [lang] Italian update, thanks to Luca Rebellato 
+ [lang] Spanish update, thanks to Daniel Hinostroza 
. [export] Do not obey $cfg['MaxTableList'] on database export
- [doc] UploadDir and the Import tab, thanks to Juergen Wind
- bug #1766975 Parameters lost when editing stored routine

2.10.3.0 (2007-07-20)

- bug #1734285 Copy database with VIEWs
- bug #1722502 DROP TABLE in export VIEW
- bug #1729027 Sorting results of VIEW browsing
- bug #1733012 Unwanted table alias in delete button
- bug #1736405 Pretty printer and HTML line breaks
- bug #1745257 Invalid DB name is still displayed
- bug #1730367 Calendar "Go" has no effect
- bug #1748633 Incorrect parameter validation for VIEWs
+ [lang] Russian revision, thanks to Victor Volkov and the users of
  php-myadmin.ru
- Do not try to delete an internal relation if we just deleted an InnoDB one

2.10.2.0 (2007-06-15)

+ [data] display all warnings, not only last one
- typo in fix for bug #1671813
- bug #1714908 Inserted Row Count is wrong
- bug #1712570 Deleting last record freezes
- bug #1717339 Missing header when deleting a checked column,
  thanks to Michael Keck
- bug #1717477 Warning on Query page when db is empty
- bug #1721002 db rename -> undefined cfgRelation, thanks to Jürgen Wind
- bug #1721571 CREATE database privilege not always detected,
  thanks to Gordon McNaughton
- bug #1715709 export in SQL format always includes procedures and functions
- bug #1722502 DROP TABLE in export view structure
- bug #1718787 Multi-server setup breaks Designer
- bug #1724401 Column truncation in repair table output
- patch #1726500 Wrong position of </tbody>, thanks to Jürgen Wind
- bug #1728590 Detected failing session_start fails, thanks to Jürgen Wind
- RFE #1714760 Obey ShowCreateDb on the Databases tab
- patch #1733762 Typo in message "INSERT DELAY", thanks to Victor Volkov